deploy/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: gcr.io/avian-cable-379805/bakerrang-client:1.0.12
        resources:
          limits:
            cpu: "0.2"
          requests:
            cpu: "0.05"
        ports:
        - containerPort: 3000
