deploy/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 3001
  type: NodePort
