deploy/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-loadbalancer
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
