deploy/client-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bakerrang-ssl-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: bakerrang-certificate
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: bakerrang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-nodeport
            port:
              number: 80
